--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,5 @@ j2ee.server.middleware=/Applications/NetBeans/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
+test.client.project=/Users/connorbode/Workspaces/PM2-Q1-Test
 user.properties.file=/Users/connorbode/Library/Application Support/NetBeans/8.0.2/build.properties
