--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="PM2Question1" default="default" basedir=".">
-    <description>Builds, tests, and runs the project PM2Question1.</description>
+<project name="PM2-Q1" default="default" basedir=".">
+    <description>Builds, tests, and runs the project PM2-Q1.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
